--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -40,7 +41,8 @@
 
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".ChatWindow"></activity>
+        <activity android:name=".ChatWindow" />
+        <activity android:name=".WeatherForecast"></activity>
     </application>
 
 </manifest>
