--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
         <activity android:name=".ChatWindow" />
         <activity android:name=".WeatherForecast" />
         <activity android:name=".MessageDetails" />
-        <activity android:name=".MessageFragment"></activity>
+        <activity android:name=".TestToolbar"
+            android:label="@string/title_activity_test_toolbar"
+            android:theme="@style/AppCompact">
+
+        </activity>
     </application>
 
 </manifest>
